сделал форму кроме кнопок и чекбокса

--- a/index.html
+++ b/index.html
@@ -163,9 +163,9 @@
                             </button>
                             <div class="accordeon__info">
                                 <h4>Специалист по упаковке</h4>
-                                <p>Автор запоминающегося стиля 
+                                <p>Автор запоминающегося стиля
                                     наших батончиков.
-                                    </p>
+                                </p>
                             </div>
                         </div>
                     </li>
@@ -195,9 +195,9 @@
                             </button>
                             <div class="accordeon__info">
                                 <h4>PR, маркетинг</h4>
-                                <p>По всем вопросам сотрудничества 
-                                    и рекламы писать только Миле. 
-                                    </p>
+                                <p>По всем вопросам сотрудничества
+                                    и рекламы писать только Миле.
+                                </p>
                             </div>
                         </div>
                     </li>
@@ -205,14 +205,18 @@
             </div>
         </section>
         <section class="section menu">
-            <h2 class="title title--color--white">меню</h2>
+            <h2 class="title title--color--white menu__title">меню</h2>
             <ul class="accordeon-menu">
                 <li class="accordeon-menu__item-collapsible accordeon-menu__item-collapsible--active">
                     <button class="accordeon-menu__unfolder accordeon-menu__unfolder--bg--coconut" type="button">
                         <h3>Батончики с молоком</h3>
                     </button>
                     <div class="accordeon-menu__info">
-                        <p>Рекомендуем употреблять батончики вместе с кокосовым или миндальным молоком. Так и вкуснее, и полезнее. Ну чего ещё хотеть от жизни? Батончик – он твой лучший друг и радует всех вокруг. Как классно, что можно питаться полезно и вкусно, а не как попало. Бабуля, конечно, за такую еду не похвалит, но кто её будет спрашивать – никто. Надо бы, кстати, бабулю поздравить с днём Победы.</p>
+                        <p>Рекомендуем употреблять батончики вместе с кокосовым или миндальным молоком. Так и вкуснее, и
+                            полезнее. Ну чего ещё хотеть от жизни? Батончик – он твой лучший друг и радует всех вокруг.
+                            Как классно, что можно питаться полезно и вкусно, а не как попало. Бабуля, конечно, за такую
+                            еду не похвалит, но кто её будет спрашивать – никто. Надо бы, кстати, бабулю поздравить с
+                            днём Победы.</p>
                         <button class="accordeon-menu__close-btn" type="button">
                             <svg class="accordeon-menu__close-icon">
                                 <use xlink:href="sprites/icon-sprite.svg#cross"></use>
@@ -225,7 +229,11 @@
                         <h3>С мёдом и фруктами</h3>
                     </button>
                     <div class="accordeon-menu__info">
-                        <p>Рекомендуем употреблять батончики вместе с кокосовым или миндальным молоком. Так и вкуснее, и полезнее. Ну чего ещё хотеть от жизни? Батончик – он твой лучший друг и радует всех вокруг. Как классно, что можно питаться полезно и вкусно, а не как попало. Бабуля, конечно, за такую еду не похвалит, но кто её будет спрашивать – никто. Надо бы, кстати, бабулю поздравить с днём Победы.</p>
+                        <p>Рекомендуем употреблять батончики вместе с кокосовым или миндальным молоком. Так и вкуснее, и
+                            полезнее. Ну чего ещё хотеть от жизни? Батончик – он твой лучший друг и радует всех вокруг.
+                            Как классно, что можно питаться полезно и вкусно, а не как попало. Бабуля, конечно, за такую
+                            еду не похвалит, но кто её будет спрашивать – никто. Надо бы, кстати, бабулю поздравить с
+                            днём Победы.</p>
                         <button class="accordeon-menu__close-btn" type="button">
                             <svg class="accordeon-menu__close-icon">
                                 <use xlink:href="sprites/icon-sprite.svg#cross"></use>
@@ -238,7 +246,11 @@
                         <h3>Дикие ягоды</h3>
                     </button>
                     <div class="accordeon-menu__info">
-                        <p>Рекомендуем употреблять батончики вместе с кокосовым или миндальным молоком. Так и вкуснее, и полезнее. Ну чего ещё хотеть от жизни? Батончик – он твой лучший друг и радует всех вокруг. Как классно, что можно питаться полезно и вкусно, а не как попало. Бабуля, конечно, за такую еду не похвалит, но кто её будет спрашивать – никто. Надо бы, кстати, бабулю поздравить с днём Победы.</p>
+                        <p>Рекомендуем употреблять батончики вместе с кокосовым или миндальным молоком. Так и вкуснее, и
+                            полезнее. Ну чего ещё хотеть от жизни? Батончик – он твой лучший друг и радует всех вокруг.
+                            Как классно, что можно питаться полезно и вкусно, а не как попало. Бабуля, конечно, за такую
+                            еду не похвалит, но кто её будет спрашивать – никто. Надо бы, кстати, бабулю поздравить с
+                            днём Победы.</p>
                         <button class="accordeon-menu__close-btn" type="button">
                             <svg class="accordeon-menu__close-icon">
                                 <use xlink:href="sprites/icon-sprite.svg#cross"></use>
@@ -321,27 +333,71 @@
                 <form action="" class="form">
                     <div class="form__col">
                         <div class="form__row">
-                            <label class="form__label"><span class="form__label-title">Имя</span><input type="text" class="form__input" name="name"></label>
-                            <label class="form__label"><span class="form__label-title">Телефон</span><input type="tel" class="form__input" name="tel"></label>
+                            <label class="form__label">
+                                <div class="form__label-title">Имя</div>
+                                <input type="text" class="form__input" name="name">
+                            </label>
+                            <label class="form__label">
+                                <div class="form__label-title">Телефон</div>
+                                <input type="tel" class="form__input" name="tel">
+                            </label>
                         </div>
-                        <div class="form__row"><label for="" class="form__label"><span class="form__label-title">Улица</span><input type="text" name="street" class="form__input"></label></div>
                         <div class="form__row">
-                            <label class="form__label"><span class="form__label-title">Дома</span><input type="text" name="house-num" class="form__input"></label>
-                            <label class="form__label"><span class="form__label-title">Корпус</span><input type="text" name="housing-num" class="form__input"></label>
-                            <label class="form__label"><span class="form__label-title">Квартира</span><input type="text" name="apartment-num" class="form__input"></label>
-                            <label class="form__label"><span class="form__label-title">Этаж</span><input type="text" name="floor-num" class="form__input"></label>
+                            <label class="form__label">
+                                <div class="form__label-title">Улица</div>
+                                <input type="text" name="street" class="form__input">
+                            </label></div>
+                        <div class="form__row">
+                            <label class="form__label">
+                                <div class="form__label-title">Дом</div>
+                                <input type="text" name="house-num" class="form__input">
+                            </label>
+                            <label class="form__label">
+                                <div class="form__label-title">Корпус</div>
+                                <input type="text" name="housing-num" class="form__input">
+                            </label>
+                            <label class="form__label">
+                                <div class="form__label-title">Квартира</div>
+                                <input type="text" name="apartment-num" class="form__input">
+                            </label>
+                            <label class="form__label">
+                                <div class="form__label-title">Этаж</div>
+                                <input type="text" name="floor-num" class="form__input">
+                            </label>
                         </div>
                     </div>
                     <div class="form__col">
-                        <div class="form__comment">
-                            <label for="" class="form__label"><span class="form__label-title">Этаж</span><textarea type="text" name="floor-num" class="form__input form__textarea"></textarea></label>
+                        <div class="form__row">
+                            <label class="form__label">
+                                <div class="form__label-title">Комментарий</div>
+                                <textarea type="text" name="floor-num" class="form__input form__textarea"></textarea>
+                            </label>
                         </div>
                         <div class="form__options">
-                            <label for="" class="form_label"><input type="radio" class="form__radio-btn" name="change" value="change"><span class="form__label-title">Потребуется сдача</span></label>
-                            <label for="" class="form_label"><input type="radio" class="form__radio-btn" name="change" value="card"><span class="form__label-title">Оплата по карте</span></label>
-                            <label for="" class="form_label"><input type="checkbox" class="form__checkbox" name="call" value="do-not-call"><span class="form__label-title">Не перезванивать</span></label>
+                            <div class="form__row">
+                                <label class="form__radio">
+                                    <input type="radio" class="form__radio-elem" name="payment" value="change">
+                                    <div class="form__radio-fake"></div>
+                                    <div class="form__label-title form__radio-title">Потребуется сдача</div>
+                                </label>
+                                <label class="form__radio">
+                                    <input type="radio" class="form__radio-elem" name="payment" value="card">
+                                    <div class="form__radio-fake"></div>
+                                    <div class="form__label-title form__radio-title">Оплата по карте</div>
+                                </label>
+                            </div>
+                            <div class="form__row">
+                                <label class="form__radio--checkbox">
+                                    <input type="checkbox" class="form__radio-elem form__radio-elem--checkbox" name="call" value="do-not-call">
+                                    <div class="form__radio-fake"> 
+                                        <svg class="form__checkbox-icon">
+                                        <use xlink:href="sprites/icon-sprite.svg#check"></use>
+                                    </svg></div>
+                                    <div class="form__label-title form__radio-title">Не перезванивать</div>
+                                </label>
+                            </div>
                         </div>
-                        <div class="form__buttons">
+                        <div class="form__row">
                             <button class="btn form__submit" type="submit">заказать</button>
                             <button class="form__reset" type="rese">Очистить</button>
                         </div>
@@ -369,7 +425,7 @@
                                     <use xlink:href="sprites/icon-sprite.svg#vk"></use>
                                 </svg>
                             </a>
-                        </li> 
+                        </li>
                         <li class="social__item">
                             <a href="#" class="social__link">
                                 <svg class="social__icon">
@@ -394,7 +450,7 @@
                     </ul>
                 </div>
             </footer>
-        </section>     
+        </section>
         <ul class="fixed-menu">
             <li class="fixed-menu__item">
                 <a class="fixed-menu__dot fixed-menu__dot--active" href="#" aria-label="О нас"></a>
@@ -423,5 +479,5 @@
         </ul>
         </li>
 </body>
-    
+
 </html>
