Продолжение работы над адаптивом

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                                 </li>
                             </ul>
                         </nav>
-                        <a href="tel:88009039090" class="phone-num">
+                        <a href="tel:88009039090" class="phone-num header__phone-num">
                             <svg class="phone-num__icon">
                                 <use xlink:href="sprites/icon-sprite.svg#phone"></use>
                             </svg>
@@ -138,7 +138,7 @@
                 </ul>
         </section>
         <section class="section team">
-            <div class="container">
+            <div class="team__inner container">
                 <h2 class="title team__title">команда</h2>
                 <ul class="accordeon">
                     <li class="accordeon__item">
