Закончил планшетный адаптив кроме формы, начал мобильный

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                 <ul class="reviews__slider">
                     <li class="review-snippet review-snippet--active">
                         <img src="img/content/user-fem-brown.jpg" alt="user avatar" class="review-snippet__userpic">
-                        <div class="review-snippet__content  review-snippet--active">
+                        <div class="review-snippet__content">
                             <span class="review-snippet__title">
                                 <h3>Лучший перекус</h3>
                             </span>
@@ -286,7 +286,7 @@
                         </div>
                     </li>
                     <li class="review-snippet">
-                        <img src="img/content/user-fem-ginger.jpg" alt="user avatar" class="review-snippet__usepic">
+                        <img src="img/content/user-fem-ginger.jpg" alt="user avatar" class="review-snippet__userpic">
                         <div class="review-snippet__content">
                             <span class="review-snippet__title">
                                 <h3>Лучшие батончики премиум уровня</h3>
@@ -299,7 +299,7 @@
                         </div>
                     </li>
                     <li class="review-snippet">
-                        <img src="img/content/user-male.jpg" alt="user avatar" class="review-snippet__usepic">
+                        <img src="img/content/user-male.jpg" alt="user avatar" class="review-snippet__userpic">
                         <div class="review-snippet__content">
                             <span class="review-snippet__title">
                                 <h3>Идеально подходят для спортсменов</h3>
@@ -333,7 +333,7 @@
                 </li>
         </section>
         <section class="section order">
-            <div class="container">
+            <div class="order__inner container">
                 <h2 class="title title--color--green">Закажите доставку</h2>
                 <form action="" class="form">
                     <div class="form__col">
@@ -402,7 +402,7 @@
                                 </label>
                             </div>
                         </div>
-                        <div class="form__row">
+                        <div class="form__row form__buttons">
                             <button class="btn form__submit" type="submit">заказать</button>
                             <button class="form__reset" type="rese">Очистить</button>
                         </div>
@@ -423,36 +423,38 @@
                             8 800 903 90 90
                         </a>
                     </div>
-                    <ul class="footer__social social">
-                        <li class="social__item">
-                            <a href="#" class="social__link">
-                                <svg class="social__icon">
-                                    <use xlink:href="sprites/icon-sprite.svg#vk"></use>
-                                </svg>
-                            </a>
-                        </li>
-                        <li class="social__item">
-                            <a href="#" class="social__link">
-                                <svg class="social__icon">
-                                    <use xlink:href="sprites/icon-sprite.svg#facebook"></use>
-                                </svg>
-                            </a>
-                        </li>
-                        <li class="social__item">
-                            <a href="#" class="social__link">
-                                <svg class="social__icon">
-                                    <use xlink:href="sprites/icon-sprite.svg#instagram"></use>
-                                </svg>
-                            </a>
-                        </li>
-                        <li class="social__item">
-                            <a href="#" class="social__link">
-                                <svg class="social__icon">
-                                    <use xlink:href="sprites/icon-sprite.svg#twitter"></use>
-                                </svg>
-                            </a>
-                        </li>
-                    </ul>
+                    <div class="footer__social">
+                        <ul class="social">
+                            <li class="social__item">
+                                <a href="#" class="social__link">
+                                    <svg class="social__icon">
+                                        <use xlink:href="sprites/icon-sprite.svg#vk"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="social__item">
+                                <a href="#" class="social__link">
+                                    <svg class="social__icon">
+                                        <use xlink:href="sprites/icon-sprite.svg#facebook"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="social__item">
+                                <a href="#" class="social__link">
+                                    <svg class="social__icon">
+                                        <use xlink:href="sprites/icon-sprite.svg#instagram"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="social__item">
+                                <a href="#" class="social__link">
+                                    <svg class="social__icon">
+                                        <use xlink:href="sprites/icon-sprite.svg#twitter"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </footer>
         </section>
