Сделал планшетный и мобильный адаптивы вплоть до 320 х 480

--- a/index.html
+++ b/index.html
@@ -427,28 +427,28 @@
                         <ul class="social">
                             <li class="social__item">
                                 <a href="#" class="social__link">
-                                    <svg class="social__icon">
+                                    <svg class="social__icon" viewBox="0 0 36.7 36.7"> <!--Добавил viewBox сюда для корректной работы автоскейлинга через процентную ширину-->
                                         <use xlink:href="sprites/icon-sprite.svg#vk"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social__item">
                                 <a href="#" class="social__link">
-                                    <svg class="social__icon">
+                                    <svg class="social__icon" viewBox="0 0 36.7 36.7">
                                         <use xlink:href="sprites/icon-sprite.svg#facebook"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social__item">
                                 <a href="#" class="social__link">
-                                    <svg class="social__icon">
+                                    <svg class="social__icon" viewBox="0 0 36.7 36.7">
                                         <use xlink:href="sprites/icon-sprite.svg#instagram"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social__item">
                                 <a href="#" class="social__link">
-                                    <svg class="social__icon">
+                                    <svg class="social__icon" viewBox="0 0 36.7 36.7">
                                         <use xlink:href="sprites/icon-sprite.svg#twitter"></use>
                                     </svg>
                                 </a>
