--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
                                 <a href="#" class="social__link">
                                     <svg class="social__icon" viewBox="0 0 36.7 36.7">
                                         <use xlink:href="sprites/icon-sprite.svg#twitter"></use>
-                                    </svg>
+                                    </svg>фв
                                 </a>
                             </li>
                         </ul>
