Большая часть десктопного слайдера

--- a/index.html
+++ b/index.html
@@ -155,6 +155,53 @@
                     </li>
                 </ul>
         </section>
+        <section class="section slider">
+            <div class="slider__inner container">
+                <button class="slider__arrow--pos--left"></button>
+                <div class="slider__main">
+                    <ul class="slider__list">
+                        <li class="slider__item">
+                            <img src="./img/content/slider-product-seaweed.png" alt="Батончик Морские водоросли" class="slider__product-pic">
+                            <div class="slider__content">
+                                <button class="slider__composition-holder">
+                                    <svg class="slider__composition-icon"></svg>
+                                </button>
+                                <div class="slider__info">
+                                    <h3>батончик “морские 
+                                        водоросли”</h3>
+                                    <p>Гранола из морских водорослей с овсом, миндалем и тыквенными семечками. В состав также входят: сухое молоко, заменитель сахара и какао бобы.</p>
+                                </div>
+                                <div class="slider__row">
+                                    <div class="slider__spec"><span>Калорийность</span><b>120 ккал</b></div>
+                                    <div class="slider__spec"><span>Вес</span><b>98 грамм</b></div>
+                                </div>
+                                <div class="slider__row">
+                                    <span class="slider__price">140 &#x20bd</span><button class="btn">заказать</button>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+                <button class="slider__arrow--pos--right"></button>
+            </div>
+        </section>
+        <!-- <div class="slider-container">
+            <a class="arrow" id="left" href="#">←</a>
+            <div class="slider">
+              <div class="items" id="items">
+                <div class="item">1</div>
+                <div class="item">2</div>
+                <div class="item">3</div>
+                <div class="item">4</div>
+                <div class="item">5</div>
+                <div class="item">6</div>
+                <div class="item">7</div>
+                <div class="item">8</div>
+                <div class="item">9</div>
+              </div>
+            </div>
+            <a class="arrow" id="right" href="#">→</a>
+          </div> -->
         <section class="section team">
             <div class="team__inner container">
                 <h2 class="title team__title">команда</h2>
