основа ховера в слайдере

--- a/index.html
+++ b/index.html
@@ -157,14 +157,70 @@
         </section>
         <section class="section slider">
             <div class="slider__inner container">
-                <button class="slider__arrow--pos--left"></button>
+                <button class="slider__arrow slider__arrow--pos--left">
+                    <svg class="slider__arrow-icon">
+                        <use xlink:href="sprites/icon-sprite.svg#arrow"></use>
+                    </svg>
+                    <button class="slider__arrow slider__arrow--pos--right">
+                        <svg class="slider__arrow-icon">
+                            <use xlink:href="sprites/icon-sprite.svg#arrow"></use>
+                        </svg>
+                    </button>
+                </button>
                 <div class="slider__main">
                     <ul class="slider__list">
                         <li class="slider__item">
                             <img src="./img/content/slider-product-seaweed.png" alt="Батончик Морские водоросли" class="slider__product-pic">
                             <div class="slider__content">
                                 <button class="slider__composition-holder">
-                                    <svg class="slider__composition-icon"></svg>
+                                    <svg class="slider__composition-icon">
+                                        <use xlink:href="sprites/icon-sprite.svg#bar"></use>
+                                    </svg>
+                                    состав
+                                    <ul class="slider__composition-list">
+                                        <li class="composition-item">
+                                            <svg class="slider__composition-item-pic">
+                                                <use xlink:href="sprites/icon-sprite.svg#"></use>
+                                            </svg>
+                                            Овёс 25г
+                                        </li>
+                                        <li class="composition-item">
+                                            <svg class="slider__composition-item-pic">
+                                                <use xlink:href="sprites/icon-sprite.svg#"></use>
+                                            </svg>
+                                            Овёс 25г
+                                        </li>
+                                        <li class="composition-item">
+                                            <svg class="slider__composition-item-pic">
+                                                <use xlink:href="sprites/icon-sprite.svg#"></use>
+                                            </svg>
+                                            Овёс 25г
+                                        </li>
+                                        <li class="composition-item">
+                                            <svg class="slider__composition-item-pic">
+                                                <use xlink:href="sprites/icon-sprite.svg#"></use>
+                                            </svg>
+                                            Овёс 25г
+                                        </li>
+                                        <li class="composition-item">
+                                            <svg class="slider__composition-item-pic">
+                                                <use xlink:href="sprites/icon-sprite.svg#"></use>
+                                            </svg>
+                                            Овёс 25г
+                                        </li>
+                                        <li class="composition-item">
+                                            <svg class="slider__composition-item-pic">
+                                                <use xlink:href="sprites/icon-sprite.svg#"></use>
+                                            </svg>
+                                            Овёс 25г
+                                        </li>
+                                        <li class="composition-item">
+                                            <svg class="slider__composition-item-pic">
+                                                <use xlink:href="sprites/icon-sprite.svg#"></use>
+                                            </svg>
+                                            Овёс 25г
+                                        </li>
+                                    </ul>  
                                 </button>
                                 <div class="slider__info">
                                     <h3>батончик “морские 
@@ -182,26 +238,8 @@
                         </li>
                     </ul>
                 </div>
-                <button class="slider__arrow--pos--right"></button>
             </div>
         </section>
-        <!-- <div class="slider-container">
-            <a class="arrow" id="left" href="#">←</a>
-            <div class="slider">
-              <div class="items" id="items">
-                <div class="item">1</div>
-                <div class="item">2</div>
-                <div class="item">3</div>
-                <div class="item">4</div>
-                <div class="item">5</div>
-                <div class="item">6</div>
-                <div class="item">7</div>
-                <div class="item">8</div>
-                <div class="item">9</div>
-              </div>
-            </div>
-            <a class="arrow" id="right" href="#">→</a>
-          </div> -->
         <section class="section team">
             <div class="team__inner container">
                 <h2 class="title team__title">команда</h2>
