Продолжение работы на ховером в слайдере

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Chocco</title>
     <link rel="stylesheet" href="css/main.css">
 </head>
-
 <body>
     <div class="wrapper">
         <section class="section hero">
@@ -180,43 +179,43 @@
                                     <ul class="slider__composition-list">
                                         <li class="composition-item">
                                             <svg class="slider__composition-item-pic">
-                                                <use xlink:href="sprites/icon-sprite.svg#"></use>
+                                                <use xlink:href="sprites/icon-sprite.svg#oat"></use>
                                             </svg>
                                             Овёс 25г
                                         </li>
                                         <li class="composition-item">
                                             <svg class="slider__composition-item-pic">
-                                                <use xlink:href="sprites/icon-sprite.svg#"></use>
+                                                <use xlink:href="sprites/icon-sprite.svg#seaweed"></use>
                                             </svg>
                                             Овёс 25г
                                         </li>
                                         <li class="composition-item">
                                             <svg class="slider__composition-item-pic">
-                                                <use xlink:href="sprites/icon-sprite.svg#"></use>
+                                                <use xlink:href="sprites/icon-sprite.svg#almond"></use>
                                             </svg>
                                             Овёс 25г
                                         </li>
                                         <li class="composition-item">
                                             <svg class="slider__composition-item-pic">
-                                                <use xlink:href="sprites/icon-sprite.svg#"></use>
+                                                <use xlink:href="sprites/icon-sprite.svg#powder "></use>
                                             </svg>
                                             Овёс 25г
                                         </li>
                                         <li class="composition-item">
                                             <svg class="slider__composition-item-pic">
-                                                <use xlink:href="sprites/icon-sprite.svg#"></use>
+                                                <use xlink:href="sprites/icon-sprite.svg#seeds"></use>
                                             </svg>
                                             Овёс 25г
                                         </li>
                                         <li class="composition-item">
                                             <svg class="slider__composition-item-pic">
-                                                <use xlink:href="sprites/icon-sprite.svg#"></use>
+                                                <use xlink:href="sprites/icon-sprite.svg#honey"></use>
                                             </svg>
                                             Овёс 25г
                                         </li>
                                         <li class="composition-item">
                                             <svg class="slider__composition-item-pic">
-                                                <use xlink:href="sprites/icon-sprite.svg#"></use>
+                                                <use xlink:href="sprites/icon-sprite.svg#beans"></use>
                                             </svg>
                                             Овёс 25г
                                         </li>
